--- a/Portfolio/src/app/components/primer-info/primer-info.component.html
+++ b/Portfolio/src/app/components/primer-info/primer-info.component.html
@@ -1,11 +1,9 @@
-<div class="container">
-    <div class="row">
+     <div class="row">
         <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
-            <img src="../../../assets/foto perfil.JPG" 
-            class="img-fluid">
+            <img src="../../../assets/foto perfil.JPG" class="img-fluid" id="fotopersonal">
         </div>
         <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
-            <p>Maffoni Daniel Matias</p>
+            <p id="nombre">Maffoni Daniel Matias</p>
             <p>Full Stack Developer Junior</p>
         </div>
         <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
@@ -15,4 +13,4 @@
              </span>
         </div>
     </div>
-</div>
+
