--- a/Portfolio/src/app/components/header/header.component.html
+++ b/Portfolio/src/app/components/header/header.component.html
@@ -1,6 +1,5 @@
-<div>
-<app-logo-argentina></app-logo-argentina>  
-<app-social></app-social>
-<app-solapa></app-solapa>
+<div class="row">
+    <app-logo-argentina></app-logo-argentina>  
+    <app-solapa></app-solapa>
 </div>
 
