--- a/Portfolio/src/app/components/logo-argentina/logo-argentina.component.html
+++ b/Portfolio/src/app/components/logo-argentina/logo-argentina.component.html
@@ -1,1 +1,16 @@
-<img src="../../../assets/APLogo.png" id="logoArgentina">
+<div class="row">
+    <div class="container">
+        <div class="logo">
+            <img src="../../../assets/APLogo.png" id="logoArgentina">
+        </div>
+        <div class="redes">
+                <a href=""><img src="../../../assets/facebook.png" alt="facebook"></a>
+                <a href=""><img src="../../../assets/github.png" alt="github"></a>
+                <a href=""><img src="../../../assets/instagram.png" alt="instagram"></a>
+                <a href=""><img src="../../../assets/linkedin.png" alt="linkedin"></a>
+                <a href=""><img src="../../../assets/twitter.png" alt="twitter"></a>
+                <button type="button" class="btn btn-outline-light">INGRESAR</button>            
+        </div>
+    </div>
+</div>
+
