--- a/Portfolio/Front End/src/app/components/solapa/solapa.component.html
+++ b/Portfolio/Front End/src/app/components/solapa/solapa.component.html
@@ -1,3 +1,3 @@
 <div>
-<img src="../../../assets/hipnotic-gif-gifmaniacos.es-33.gif" id="solapa">
+<img src="../../../assets/Guitarra.jpg" id="solapa">
 </div>
