--- a/Portfolio/Front End/src/app/components/experiencia/experiencia.component.css
+++ b/Portfolio/Front End/src/app/components/experiencia/experiencia.component.css
@@ -1,9 +1,14 @@
 .row{
     padding: 20px;
+    color:white;
 }
 div{
-    background-color: #a1b5cb;
+    background-color: #7adabedc;
 }
-h1, h3{
+img{
+    height: 100px;
+    width: auto;
+}
+img, h1, h3{
     display: inline;
 }
