--- a/Portfolio/Front End/src/app/components/primer-info/primer-info.component.css
+++ b/Portfolio/Front End/src/app/components/primer-info/primer-info.component.css
@@ -1,8 +1,9 @@
 .row{
     padding: 20px;
+    color:antiquewhite
 }
 div{
-    background-color: #a1b5cb;
+    background-color: #191e29;
     text-align: center;
 }
 /*foto personal*/
