--- a/Portfolio/Front End/src/app/components/solapa/solapa.component.html
+++ b/Portfolio/Front End/src/app/components/solapa/solapa.component.html
@@ -1,3 +1,5 @@
-<div>
-<img src="../../../assets/Guitarra.jpg" id="solapa">
+<div class="row">
+    <div>
+        <img src="../../../assets/Frase 2.jpg">
+    </div>
 </div>
