--- a/Portfolio/Front End/src/app/app.component.html
+++ b/Portfolio/Front End/src/app/app.component.html
@@ -1,7 +1,1 @@
-<app-header></app-header>
-<app-primer-info></app-primer-info>
-<app-experiencia></app-experiencia>
-<app-educacion></app-educacion>
-<app-skills></app-skills>
-<app-proyectos></app-proyectos>
-<app-footer></app-footer>
+<router-outlet></router-outlet>
