--- a/Portfolio/Front End/src/app/components/experiencia/experiencia.component.css
+++ b/Portfolio/Front End/src/app/components/experiencia/experiencia.component.css
@@ -1,14 +1,15 @@
 .row{
     padding: 20px;
-    color:white;
+    color:#a1a1a1;
 }
 div{
-    background-color: #7adabedc;
+    background-color: #1e1e1e;
 }
 img{
     height: 100px;
     width: auto;
 }
 img, h1, h3{
+    margin-top: 30px;
     display: inline;
 }
