--- a/Portfolio/Front End/src/app/components/footer/footer.component.css
+++ b/Portfolio/Front End/src/app/components/footer/footer.component.css
@@ -1,8 +1,8 @@
 .row{
-    background-color: #a1b5cb;
+    background-color: #ffffff;
 }
 footer{
-    color: #fefefe;
+    color: #000000;
     font-size: 14px;
     display: flex;
     flex-direction: column;
