--- a/Portfolio/Front End/src/app/components/primer-info/primer-info.component.html
+++ b/Portfolio/Front End/src/app/components/primer-info/primer-info.component.html
@@ -1,6 +1,6 @@
      <div class="row">
         <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
-            <img src="../../../assets/foto perfil.JPG" class="img-fluid" id="fotopersonal">
+            <img src="../../../assets/foto perfil 3.jpg" class="img-fluid" id="fotopersonal">
         </div>
         <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
             <p id="nombre">{{persona.nombre}} {{persona.apellido}}</p>
