--- a/Portfolio/Front End/src/app/components/proyectos/proyectos.component.css
+++ b/Portfolio/Front End/src/app/components/proyectos/proyectos.component.css
@@ -1,6 +1,7 @@
 .row{
     padding: 20px;
-    background-color: #a1b5cb;
+    color: #000000;
+    background-color: #ffffff;
 }
 .contenedor{
     width: auto;
@@ -10,5 +11,6 @@
     text-align: justify;
 }
 .img-proyecto{
+    background-color: #a1b5cb;
     box-shadow: 10px 10px 30px #000000;
 }
