--- a/Portfolio/Front End/src/app/components/solapa/solapa.component.css
+++ b/Portfolio/Front End/src/app/components/solapa/solapa.component.css
@@ -1,9 +1,13 @@
 div{
-    background-color: black;
+    background: linear-gradient(#191e29 10%,#132d46 90%);
+    text-align: center; 
 }
 
-#solapa{
-    align-items: center;
-    width: 70%;
-    height: 500px;
+img{
+    width: auto;
+    height: 400px;
+    border-radius: 30px;
+    border-style: solid;
+    border-color: #01c380;
 }
+
