--- a/Portfolio/Front End/src/app/components/logo-argentina/logo-argentina.component.html
+++ b/Portfolio/Front End/src/app/components/logo-argentina/logo-argentina.component.html
@@ -9,7 +9,8 @@
                 <a href=""><img src="../../../assets/instagram.png" alt="instagram"></a>
                 <a href=""><img src="../../../assets/linkedin.png" alt="linkedin"></a>
                 <a href=""><img src="../../../assets/twitter.png" alt="twitter"></a>
-                <button type="button" class="btn btn-outline-light" (click)="login()">INGRESAR</button>            
+                <button type="button" class="btn btn-outline-light" (click)="login()" *ngIf="!isLogged">INGRESAR</button>
+                <button type="button" class="btn btn-outline-light" (click)="onLogOut()" *ngIf="isLogged">CERRAR SESION</button>            
         </div>
     </div>
 </div>
