--- a/Portfolio/Front End/src/app/components/skills/skills.component.css
+++ b/Portfolio/Front End/src/app/components/skills/skills.component.css
@@ -3,3 +3,9 @@
     padding: 20px;
     color: #696e79;
 }
+
+.circulo{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
