--- a/Portfolio/Front End/src/app/components/skills/skills.component.html
+++ b/Portfolio/Front End/src/app/components/skills/skills.component.html
@@ -1,9 +1,17 @@
 <div class="row">
+
     <h1>Hard and Soft Skills</h1>
-    <div class="text-center col-sm-4 col-md-4 col-lg-4">
+    <div class="col-lg-2">
+        <button type="button" routerLink="/newskill" class="btn btn-light" *ngIf="isLogged">Nueva Skill</button>
+    </div>
+
+    <div class="text-center col-sm-4 col-md-4 col-lg-4 circulo" *ngFor="let skill of skill">
     <circle-progress
-        [percent]="20"
+        [percent]="(skill.porcentaje)"
         [radius]="100"
+        [title]="(skill.nombre)"
+        [showTitle]="true"
+        [titleColor]="'#212f3c'"
         [outerStrokeWidth]="16"
         [innerStrokeWidth]="8"
         [outerStrokeColor]="'#01c38d'"
@@ -11,65 +19,16 @@
         [animation]="true"
         [animationDuration]="300"
     ></circle-progress>
+
+    <div>
+        <td *ngIf="isLogged">
+            <button class="btn btn-light" routerLink="/editskill/{{skill.id}}">
+            <i class="bi bi-pen"></i></button>
+        </td>
+        <td *ngIf="isLogged">
+            <button class="btn btn-light" (click)="delete(skill.id)">
+            <i class="bi bi-trash3"></i></button>
+        </td>
     </div>
-    <div class="text-center col-sm-4 col-md-4 col-lg-4">
-        <circle-progress
-            [percent]="85"
-            [radius]="100"
-            [outerStrokeWidth]="16"
-            [innerStrokeWidth]="8"
-            [outerStrokeColor]="'#01c38d'"
-            [innerStrokeColor]="'#C7E596'"
-            [animation]="true"
-            [animationDuration]="300"
-        ></circle-progress>
-        </div>
-        <div class="text-center col-sm-4 col-md-4 col-lg-4">
-            <circle-progress
-                [percent]="85"
-                [radius]="100"
-                [outerStrokeWidth]="16"
-                [innerStrokeWidth]="8"
-                [outerStrokeColor]="'#01c38d'"
-                [innerStrokeColor]="'#C7E596'"
-                [animation]="true"
-                [animationDuration]="300"
-            ></circle-progress>
-            </div>
-            <div class="text-center col-sm-4 col-md-4 col-lg-4">
-                <circle-progress
-                    [percent]="85"
-                    [radius]="100"
-                    [outerStrokeWidth]="16"
-                    [innerStrokeWidth]="8"
-                    [outerStrokeColor]="'#01c38d'"
-                    [innerStrokeColor]="'#C7E596'"
-                    [animation]="true"
-                    [animationDuration]="300"
-                ></circle-progress>
-                </div>
-                <div class="text-center col-sm-4 col-md-4 col-lg-4">
-                    <circle-progress
-                        [percent]="85"
-                        [radius]="100"
-                        [outerStrokeWidth]="16"
-                        [innerStrokeWidth]="8"
-                        [outerStrokeColor]="'#01c38d'"
-                        [innerStrokeColor]="'#C7E596'"
-                        [animation]="true"
-                        [animationDuration]="300"
-                    ></circle-progress>
-                    </div>
-                    <div class="text-center col-sm-4 col-md-4 col-lg-4">
-                        <circle-progress
-                            [percent]="85"
-                            [radius]="100"
-                            [outerStrokeWidth]="16"
-                            [innerStrokeWidth]="8"
-                            [outerStrokeColor]="'#01c38d'"
-                            [innerStrokeColor]="'#C7E596'"
-                            [animation]="true"
-                            [animationDuration]="300"
-                        ></circle-progress>
-                        </div>
+    </div>  
 </div>
