--- a/Portfolio/Front End/src/app/components/experiencia/new-experiencia.component.html
+++ b/Portfolio/Front End/src/app/components/experiencia/new-experiencia.component.html
@@ -10,11 +10,9 @@
                     <label for="descripcionE">Descripcion de la tarea</label>
                     <input type="text" class="form-control" id="descripcionE" name="descripcionE"[(ngModel)]="descripcionE" required>
                 </div>
-                <button class="btn btn-success">
-                    Agregar Experiencia
-                </button>
+                <button click="onUpload"class="btn btn-success">Agregar Experiencia</button>
             </form>
         </div>
-    </div>
+    </div>  
 </div>
 
