--- a/Portfolio/Front End/src/app/components/educacion/educacion.component.css
+++ b/Portfolio/Front End/src/app/components/educacion/educacion.component.css
@@ -1,15 +1,18 @@
 .row{
     padding: 20px;
     color: #a1a1a1;
+    text-align: center;
 }
-
-.table{
-    color:antiquewhite;
+.info{
+    color:#a1a1a1;
+    border-color: #1e1e1e;
 }
 
 div{
     background-color: #1e1e1e;
 }
-h1, h3{
-    display: inline;
+
+h1{
+    color: rgb(234, 242, 250);
 }
+
