--- a/Portfolio/Front End/src/app/components/educacion/educacion.component.html
+++ b/Portfolio/Front End/src/app/components/educacion/educacion.component.html
@@ -1,29 +1,25 @@
 <div class="row">
-    <h1>Educacion</h1>
-    <div class="col-lg-2">
-    <button type="button" class="btn btn-secondary" routerLink="/nuevaedu" *ngIf="isLogged">
-        Agregar Educacion
-    </button>    
-    </div>
-    <div class="col-lg-1"></div>
-    <div class="col-lg-11">
-        <table class="table">
-            <tbody>
-                <tr *ngFor="let Educacion of educacion">
-                    <td>
-                        <h2>{{Educacion.nombreE}}</h2>
-                    </td>
-                    <td>{{Educacion.descripcionE}}</td>
-                    <td *ngIf="isLogged">
-                        <button class="btn btn-light" routerLink="/editedu/{{Educacion.id}}">
+    <div class="col-lg-12">
+        <h1>Educacion</h1>
+        <div class="col-lg-12">
+            <button type="button" class="btn btn-secondary" routerLink="/nuevaedu" *ngIf="isLogged">
+                Agregar Educacion
+            </button>
+        </div>
+        <br>
+        <div class="info">
+            <div *ngFor="let Educacion of educacion">
+                <h2>{{Educacion.nombreE}}</h2>
+                <p>{{Educacion.descripcionE}}</p>
+                <h3 *ngIf="isLogged">
+                    <button class="btn btn-light" routerLink="/editedu/{{Educacion.id}}">
                         <i class="bi bi-pen"></i>EDITAR</button>
-                    </td>
-                    <td *ngIf="isLogged">
-                        <button class="btn btn-light" (click)="borrar(Educacion.id)">
+                    </h3>
+                <h3 *ngIf="isLogged">
+                    <button class="btn btn-light" (click)="borrar(Educacion.id)">
                         <i class="bi bi-trash3"></i>BORRAR</button>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+                    </h3>
+            </div>
+        </div>
     </div>
 </div>
