--- a/Portfolio/Front End/src/app/components/logo-argentina/logo-argentina.component.html
+++ b/Portfolio/Front End/src/app/components/logo-argentina/logo-argentina.component.html
@@ -4,11 +4,9 @@
             <img src="../../../assets/APLogo.png" id="logoArgentina">
         </div>
         <div class="redes">
-                <a href=""><img src="../../../assets/facebook.png" alt="facebook"></a>
-                <a href=""><img src="../../../assets/github.png" alt="github"></a>
-                <a href=""><img src="../../../assets/instagram.png" alt="instagram"></a>
-                <a href=""><img src="../../../assets/linkedin.png" alt="linkedin"></a>
-                <a href=""><img src="../../../assets/twitter.png" alt="twitter"></a>
+                <a href="https://github.com/Matias2405"><img src="../../../assets/github.png" alt="github"></a>
+                <a href="https://www.linkedin.com/in/matias-maffoni-725402255/"><img src="../../../assets/linkedin.png" alt="linkedin"></a>
+                <a href="https://twitter.com/Magcomputacion"><img src="../../../assets/twitter.png" alt="twitter"></a>
                 <button type="button" class="btn btn-outline-light" (click)="login()" *ngIf="!isLogged">INGRESAR</button>
                 <button type="button" class="btn btn-outline-light" (click)="onLogOut()" *ngIf="isLogged">CERRAR SESION</button>            
         </div>
