--- a/Portfolio/Front End/src/app/components/primer-info/primer-info.component.css
+++ b/Portfolio/Front End/src/app/components/primer-info/primer-info.component.css
@@ -1,6 +1,7 @@
 .row{
     padding: 20px;
     color:antiquewhite;
+    display: flex;
 }
 div{
     background-color: #132d46;
@@ -10,27 +11,39 @@ div{
 
 @media (min-width: 576px){
     #fotopersonal{
+        display: flex;
+        flex-wrap: wrap;
         position: absolute;
-        width: 14%;
+        width: 250px;
+        height: 250px;
         border-radius: 100%;
         box-shadow: 10px 10px 30px #000000;
         left: 3%;
-        top: 450px;
+        top: 430px;
+    }
+    .descripcion{
+        justify-content: center;
+        align-items: center;
+    
     }
 }
+
 @media (max-width: 575px){
     #fotopersonal{
+        display: flex;
+        flex-wrap: wrap;
         position: absolute;
-        width: 25%;
+        width: 110px;
+        height: 110px;
         border-radius: 100%;
         box-shadow: 10px 10px 30px #000000;
-        left: 38%;
-        top: 840px;
+        left: 37%;
+        top: 650px;
     }
 }
 
 /*etiqueta nombre*/
 #nombre{
     font-weight: bold;
-    margin-top: 30%;
+    margin-top: 10%;
 }
