--- a/Portfolio/Front End/src/app/components/proyectos/proyectos.component.html
+++ b/Portfolio/Front End/src/app/components/proyectos/proyectos.component.html
@@ -1,20 +1,22 @@
 <div class="row">
     <h1>Proyectos Realizados</h1>
-    <div class="col-lg-2">
+    <br>
+    <div class="col-lg-12">    
+        <img src="https://acegif.com/wp-content/uploads/loading-5.gif" width="100">
+    </div>
+    <div class="col-lg-12">
         <button type="button" class="btn btn-dark" routerLink="/nuevoproy" *ngIf="isLogged">
             Agregar Proyecto
         </button>
-        <div class="col-lg-1"></div>
-        <div class="col-lg-11">
-            <table class="table">
-                <tbody>
-                    <tr *ngFor="let Proyectos of proyectos">
-                        <td>
-                            <h2>{{Proyectos.nombreP}}</h2>
-                        </td>
-                        <td>{{Proyectos.descripcionP}}</td>
-                        <td>{{Proyectos.fechaP}}</td>
-                        <td><a href='http://{{Proyectos.linkP}}'>{{Proyectos.linkP}}</a></td>
+    </div>
+    <br>
+        <div class="col-lg-12">
+            <div *ngFor="let Proyectos of proyectos">
+                        <h2>{{Proyectos.nombreP}}</h2>
+                        <h6>{{Proyectos.descripcionP}}</h6>
+                        <p>{{Proyectos.fechaP}}</p>
+                        <p><a href='http://{{Proyectos.linkP}}'>{{Proyectos.linkP}}</a></p>
+                        <br>
                         <td *ngIf="isLogged">
                             <button class="btn btn-light" routerLink="/editproy/{{Proyectos.id}}">
                             <i class="bi bi-pen"></i>EDITAR</button>
@@ -23,9 +25,7 @@
                             <button class="btn btn-light" (click)="borrar(Proyectos.id)">
                             <i class="bi bi-trash3"></i>BORRAR</button>
                         </td>
-                    </tr>
-                </tbody>
-            </table>
+                    </div>
         </div>
-    </div>
-</div>
+
+   
