--- a/Portfolio/Front End/src/app/components/skills/skills.component.html
+++ b/Portfolio/Front End/src/app/components/skills/skills.component.html
@@ -4,14 +4,14 @@
     <div class="col-lg-2">
         <button type="button" routerLink="/newskill" class="btn btn-light" *ngIf="isLogged">Nueva Skill</button>
     </div>
-
+    
     <div class="text-center col-sm-4 col-md-4 col-lg-4 circulo" *ngFor="let skill of skill">
     <circle-progress
         [percent]="(skill.porcentaje)"
         [radius]="100"
         [title]="(skill.nombre)"
         [showTitle]="true"
-        [titleColor]="'#212f3c'"
+        [titleColor]="'#f8f8f8'" 
         [outerStrokeWidth]="16"
         [innerStrokeWidth]="8"
         [outerStrokeColor]="'#01c38d'"
