--- a/Portfolio/Front End/src/app/components/solapa/solapa.component.html
+++ b/Portfolio/Front End/src/app/components/solapa/solapa.component.html
@@ -1,5 +1,10 @@
-<div class="row">
+<div class="row" *ngIf="solapa">
     <div>
-        <img src="../../../assets/Frase 2.jpg">
+        <img src="{{solapa.img}}" id="imagensol">
+    </div>
+    <div >
+        <button type="button" class="btn btn-secondary" routerLink="/editsolapa/1" *ngIf="isLogged">
+            Editar Portada
+        </button>    
     </div>
 </div>
